@@ -366,13 +366,6 @@ o Build system
   Status:      Open
   Priority:    Medium-low
 
-  Descripton   I am having trouble using the newer gcc 4.2.4 + binutils 2.19
-               toolchain for ARM.  The problem is in arch/arm/src/Makefile:
-               In the call to objcopy to relocate the .data section, arm-elf-objcopy
-               dies with a 'Floating point exception'  No clue to the cause yet.
-  Status:      Open
-  Priority:    Medium-Low -- workaroung, stick with the 3.4.6 toolchain
-
 o NuttShell (NSH) (examples/nsh)
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
