@@ -44,8 +44,16 @@ NM			= $(CROSSDEV)nm
 OBJCOPY			= $(CROSSDEV)objcopy
 OBJDUMP			= $(CROSSDEV)objdump
 
+HOSTOS			=  ${shell uname -o}
+
 ARCHCCVERSION		= ${shell $(CC) -v 2>&1 | sed -n '/^gcc version/p' | sed -e 's/^gcc version \([0-9\.]\)/\1/g' -e 's/[-\ ].*//g' -e '1q'}
 ARCHCCMAJOR		= ${shell echo $(ARCHCCVERSION) | cut -d'.' -f1}
+
+ifeq ($(ARCHCCMAJOR),4)
+ifneq ($(HOSTOS),Cygwin)
+OBJCOPYARGS		= -R .note -R .note.gnu.build-id -R .comment
+endif
+endif
 
 ifeq ("${CONFIG_DEBUG}","y")
   ARCHOPTIMIZATION	= -g
