@@ -1,7 +1,7 @@
 ##############################################################################
 # configs/olimex-strp711/ostest/Make.defs
 #
-#   Copyright (C) 2008 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2008-2009 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -44,8 +44,16 @@ NM			= $(CROSSDEV)nm
 OBJCOPY			= $(CROSSDEV)objcopy
 OBJDUMP			= $(CROSSDEV)objdump
 
+HOSTOS			=  ${shell uname -o}
+
 ARCHCCVERSION		= ${shell $(CC) -v 2>&1 | sed -n '/^gcc version/p' | sed -e 's/^gcc version \([0-9\.]\)/\1/g' -e 's/[-\ ].*//g' -e '1q'}
 ARCHCCMAJOR		= ${shell echo $(ARCHCCVERSION) | cut -d'.' -f1}
+
+ifeq ($(ARCHCCMAJOR),4)
+ifneq ($(HOSTOS),Cygwin)
+OBJCOPYARGS		= -R .note -R .note.gnu.build-id -R .comment
+endif
+endif
 
 ifeq ("${CONFIG_DEBUG}","y")
   ARCHOPTIMIZATION	= -g
